# arcsearch

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix
.github/: FUNDING.yml
src/: config.rs  lib.rs  main.rs  systems.rs
src/config/: cli.rs  mod.rs
