[package]
name = "arcsearch"
version = "0.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcconfig = "0.5.0"
clap = { version = "4.4.11", features = ["cargo"] }
clap_complete_command = "0.6.1"
colored = "3.0.0"
regex = "1.8.2"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
